# pinesentry-fire

./: .gitignore  CHANGELOG.md  CITATION.cff  EXECUTIVE_SUMMARY.md  HUGGINGFACE_SPACES.md  INDEX.md  LICENSE  OSF_PRE_REGISTRATION.md  PAPER.md  PROGRESS_REPORT.md  QUICKSTART.md  README.md  REPORT.html  REPORT_INTERACTIVE.html  REPORT_MAP.html  REVIEWER_FAQ.md  REVIEWER_GUIDE.md  STATUS.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  Spacefile  TABLE.md  V41_AUDIT.md  colab.ipynb  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  EXECUTIVE_SUMMARY.md  INDEX.md  QUICKSTART.md  REVIEWER_GUIDE.md  STATUS.md  SUBMISSION.md  WEIGHTS_FREEZE.md
env/: environment.yml
examples/: README.md
notebooks/: 00_quickstart.md  01_setup_inventory.md  02_isofit_atmcorr.md  03_engine_training.md  04_us_palisades_validation.md  05_uiseong_sancheong_dual_hero.md  06_gwangneung_koflux_check.md  07_korea_pre_fire_atlas.md  08_one_click_reproduction.md  PineSentry_Tutorial.ipynb
reports/: REPORT_INTERACTIVE.html  REPORT_MAP.html
scripts/: analyze_try.py  atmo_residual_check.py  auto_update_status.py  bootstrap_roc_envelope.py  bootstrap_uncertainty.py  boyce_index.py  build_feature_stack.py  build_hsi_v0.py  build_hsi_v1.py  build_hsi_v1_s2_fallback.py  build_hsi_v2.py  build_hsi_v2_5.py  build_peninsula_atlas.py  case_control_sampling.py  clip_imsangdo.py  compute_ndvi_anomaly.py  compute_spectral_baselines.py  cross_site_weight_transfer.py  decisive_bands_analysis.py  diff_prospect_inversion.py  diff_prospect_torch.py  dl_baseline_1dcnn.py  download_dem_copernicus.py  download_emit.py  (+63 more)
(+45 files in other folders)
