[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinesentry-fire"
version = "0.1.0"
description = "Tanager-trained Hydraulic Stress Index for Korean pine fire prediction"
readme = "README.md"
license = { text = "CC-BY-4.0" }
authors = [{ name = "" }]
keywords = ["hyperspectral", "Tanager", "EMIT", "fire-prediction", "PROSAIL", "DOFA"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "xarray>=2023.1",
    "rioxarray>=0.15",
    "geopandas>=0.14",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pystac-client>=0.7",
]

[project.optional-dependencies]
ml = ["torch>=2.1", "transformers>=4.35", "peft>=0.7", "lightning>=2.1"]
data = ["earthaccess>=0.8", "neonutilities", "landsatxplore", "sentinelsat"]
viz = ["streamlit>=1.30", "plotly>=5.17", "folium>=0.15"]
test = ["pytest>=7.4", "nbval>=0.10"]
all = ["pinesentry-fire[ml,data,viz,test]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
